--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@storybook/react": "^4.0.4",
     "@types/jest": "^23.3.9",
     "@types/react": "^16.4.18",
+    "@types/storybook-addon-jsx": "^5.4.0",
     "@types/storybook__addon-info": "^3.4.2",
     "@types/storybook__addon-knobs": "^3.4.1",
     "@types/storybook__addon-options": "^3.2.2",
@@ -30,6 +31,7 @@
     "gulp": "^3.9.1",
     "jest": "^23.6.0",
     "semantic-ui": "^2.4.2",
+    "storybook-addon-jsx": "^5.4.0",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
   },
