--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
     "gulp": "^3.9.1",
     "jest": "^23.6.0",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "semantic-ui": "^2.4.2",
     "storybook-addon-jsx": "^5.4.0",
+    "style-loader": "^0.23.1",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
   },
