--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
     "compilerOptions": {
+        "baseUrl": "src",
+        "paths": {
+            "components/*": ["components/*"],
+            "styles/*": ["styles/*"],
+            "assets/*": ["assets/*"],
+        },
         "outDir": "build/lib",
         "module": "commonjs",
         "target": "es5",
@@ -32,7 +38,7 @@
         "emitDecoratorMetadata": true
     },
     "include": [
-        "src/**/**/*",
+        "src",
         "stories/**/*"
     ],
     "exclude": [
