--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/react": "^4.0.4",
     "@storybook/storybook-deployer": "^2.5.0",
     "@types/jest": "^23.3.9",
+    "@types/lodash": "^4.14.119",
     "@types/react": "^16.4.18",
     "@types/storybook-addon-jsx": "^5.4.0",
     "@types/storybook__addon-info": "^3.4.2",
@@ -45,8 +46,11 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@types/joi": "^14.0.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-react": "^0.83.0",
+    "validate.js": "^0.12.0"
   }
 }
