--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/joi": "^14.0.0",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
+    "react-dates": "^18.3.1",
     "react-dom": "^16.6.1",
     "semantic-ui-react": "^0.83.0",
     "validate.js": "^0.12.0"
